website/versioned_docs/version-0.15.x/api/graphback-core/globals.md
---
id: "globals"
title: "@graphback/core"
sidebar_label: "Globals"
---

## Index

### Modules

* ["annotations/DefaultValueAnnotation"](modules/_annotations_defaultvalueannotation_.md)
* ["crud/GraphbackOperationType"](modules/_crud_graphbackoperationtype_.md)
* ["crud/index"](modules/_crud_index_.md)
* ["crud/mappingHelpers"](modules/_crud_mappinghelpers_.md)
* ["db/buildModelTableMap"](modules/_db_buildmodeltablemap_.md)
* ["db/dataMapper"](modules/_db_datamapper_.md)
* ["db/defaultNameTransforms"](modules/_db_defaultnametransforms_.md)
* ["db/getPrimaryKey"](modules/_db_getprimarykey_.md)
* ["db/index"](modules/_db_index_.md)
* ["index"](modules/_index_.md)
* ["plugin/GraphbackCRUDGeneratorConfig"](modules/_plugin_graphbackcrudgeneratorconfig_.md)
* ["plugin/GraphbackCoreMetadata"](modules/_plugin_graphbackcoremetadata_.md)
* ["plugin/GraphbackGlobalConfig"](modules/_plugin_graphbackglobalconfig_.md)
* ["plugin/GraphbackPlugin"](modules/_plugin_graphbackplugin_.md)
* ["plugin/GraphbackPluginEngine"](modules/_plugin_graphbackpluginengine_.md)
* ["plugin/ModelDefinition"](modules/_plugin_modeldefinition_.md)
* ["plugin/getModelTypesFromSchema"](modules/_plugin_getmodeltypesfromschema_.md)
* ["plugin/getSelectedFieldsFromResolverInfo"](modules/_plugin_getselectedfieldsfromresolverinfo_.md)
* ["relationships/RelationshipMetadataBuilder"](modules/_relationships_relationshipmetadatabuilder_.md)
* ["relationships/relationshipHelpers"](modules/_relationships_relationshiphelpers_.md)
* ["runtime/CRUDService"](modules/_runtime_crudservice_.md)
* ["runtime/GraphbackCRUDService"](modules/_runtime_graphbackcrudservice_.md)
* ["runtime/GraphbackDataProvider"](modules/_runtime_graphbackdataprovider_.md)
* ["runtime/GraphbackProxyService"](modules/_runtime_graphbackproxyservice_.md)
* ["runtime/NoDataError"](modules/_runtime_nodataerror_.md)
* ["runtime/QueryFilter"](modules/_runtime_queryfilter_.md)
* ["runtime/createCRUDService"](modules/_runtime_createcrudservice_.md)
* ["runtime/index"](modules/_runtime_index_.md)
* ["runtime/interfaces"](modules/_runtime_interfaces_.md)
* ["runtime/withSubscriptionFilter"](modules/_runtime_withsubscriptionfilter_.md)
* ["scalars/index"](modules/_scalars_index_.md)
* ["utils/fieldTransformHelpers"](modules/_utils_fieldtransformhelpers_.md)
* ["utils/hasListType"](modules/_utils_haslisttype_.md)
* ["utils/metadataAnnotations"](modules/_utils_metadataannotations_.md)
* ["utils/printSchemaWithDirectives"](modules/_utils_printschemawithdirectives_.md)
